fix: avoid to load api entity pages to check only ids